--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Accord de soi</title>
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/index.css">
 </head>
 
 <body>
@@ -27,7 +27,7 @@
         </nav>
 
         <section id="homebutton">
-            <img src="../assets/images/c.png">
+            <img src="./assets/images/c.png">
         </section>
 
         <section id="profilebutton">
@@ -51,7 +51,7 @@
         <section id="mainSection">
             <section class="block" id="presentation">
                 <div>
-                    <img id="mainImg" src="../assets/images/pots.png">
+                    <img id="mainImg" src="./assets/images/pots.png">
                 </div>
                 <div>
                     <H1>Accord De Soi</H1>
@@ -86,7 +86,7 @@
             <section class="block" id="soins">
                 <section class="block" id="soin1">
                     <div>
-                        <img src="../assets/images/table.jpg">
+                        <img src="./assets/images/table.jpg">
                     </div>
                     <div>
                         <h3>Massage</h3>
@@ -100,7 +100,7 @@
                 </section>
                 <section class="block" id="soin2">
                     <div>
-                        <img src="../assets/images/bol.jpg">
+                        <img src="./assets/images/bol.jpg">
                     </div>
                     <div>
                         <h3>Audiothérapie</h3>
@@ -114,7 +114,7 @@
                 </section>
                 <section class="block" id="soin3">
                     <div>
-                        <img src="../assets/images/foot.jpg">
+                        <img src="./assets/images/foot.jpg">
                     </div>
                     <div>
                         <h3>Réflexologie Plantaire</h3>
